# dftbplus

./: .gitignore
app/: CMakeLists.txt
app/dftbcore/: CMakeLists.txt  libdftbcore.F90
app/waveplot/: CMakeLists.txt  libwaveplot.F90
cmake/: DftbPlusUtils.cmake
data/mol/: .h5  CH.mol2  DiTriptyceno_helicene_3a.mol2  Si10_H.mol2  benzene-C.mol2  cyanoaceteylene.mol2  diacetylene.mol2  diacetylene.xyz  diacetylene_z.mol2  formaldehyde.mol2  polyacetylene_C16.mol2  tetrahedrane.mol2  thymine.mol2  xylitol-reorered.mol2  xylitol.mol  xylitol.xyz
data/xyz/: .h5  Cl_surf.xyz  H2O_O.xyz  HCCOCCH.xyz  NaCl_13x12_L3_step.xyz  NaCl_15x8_L3_step.xyz  NaCl_8x8_L3_step2.xyz  O.xyz  TBTAP_3mols_c3h.xyz  polyacetylene_C16..cjson
doc/prokop/: DFTB_API_migration.md  DFTB_ctypes_interface.md  DFTB_docs.md  DFTB_indexing.md  DFTB_vs_xTB_refactor.md  Hamiltonian_Theory.md  NonCovalent_DFTB_Approx_xTB_Fukui.md  Testing_and_Parity_Codemap.md  dftb_ASI_level3_interface.md  grid_sto_modification_notes.md  report_compilation_on_laptop.md  rust_QMQM.md  waveplot_interface.md  waveplot_library.md  waveplot_reimplement.md  xTB_reimplementation.md
pyBall/: AtomicSystem.py  DFTBcore.py  atomicUtils.py  cpp_utils_.py  dftb_lib.py  dftb_utils.py  plotUtils.py
pyBall/OCL/: DFTBplusGridProjector.py  DFTBplusParser.py  FdataParser.py  Grid.py  OpenCLBase.py  clUtils_new.py
pyBall/WavePlot/: TestUtils.py  WavePlot.py
rust_dftb/: .gitignore  Cargo.toml  INTEGRAL_DEBUG_NOTES.md
rust_dftb/examples/: debug_h2.rs
rust_dftb/src/: error.rs  hamiltonian.rs  hamiltonian.rs_bak_phase1  hamiltonian.rs_bak_phase2  interpolation.rs  interpolation.rs_bak_phase2  io.rs  lib.rs  lib.rs_bak_phase1  neighbor.rs  output.rs  rotation.rs  rotation.rs_bak_phase1  rotation.rs_bak_phase2  scc.rs  sk_data.rs  sk_data.rs_bak_phase1  sk_data.rs_bak_phase2
rust_dftb/tests/: gpu_diagonalization.rs  parity_case.rs  parity_non_scc.rs  parity_scc.rs  parity_universal.rs  qmqm_integration.rs  run_parity.py  run_scc_full.py  tblite_helper.c  test_utils.py  xtb_parity.rs
rust_dftb/tools/: make_diatomic_hsd.py  run_dftbcore_dump.py
tests/dftb/: example_dftb_lib.py  example_hessian.py  example_orbitals.py  input.dftb  test_api_no_callbacks.py  test_basic_api.py  test_dftbcore.py  (+3 more)
(+82 files in other folders)
